fix z-indexing, spilt sass

--- a/source/stylesheets/screen.css.sass
+++ b/source/stylesheets/screen.css.sass
@@ -15,161 +15,8 @@ body
   color: #fff
   +single-box-shadow(#000, 0, 0, 10px, 100%, true)
 
-#heading
-  +clearfix
-  +container
-  // +grid-background
-
-  h2
-    display: none
-
-  h1
-    +replace-text-with-dimensions('logo.png')
-    margin-left: -$logo-offset-left + (span(1) + $blueprint-grid-margin) / 2
-    margin-top: -99px
-    +float-left
-
-  address
-    +float-left
-    +adjust-font-size-to(45px, 4)
-    margin-left: -$logo-offset-right + span(0.5) + $blueprint-grid-margin * 2
-
-    a
-      display: block
-      +hover-link
-      +link-colors(#fff)
-
-#menu
-  // this kind of kills mobilesafari
-  // $ends:    rgba(#000, 0.2)
-  // $middle:  rgba(#000, 0)
-  // +background-image(linear-gradient($ends, $middle 5%, $middle 95%, $ends 100%), image-url('menu.png'))
-
-  +single-box-shadow(#000, 0, 0, 10px, 0, true)
-  +single-transition(height, $menu-transition-duration, $menu-transition-timing)
-
-  // background:  #b5deb1 image-url('menu.png')
-  color:       #000
-  overflow:    hidden
-  position:    relative
-  +opacity(0)
-
-  > div
-    +single-transition(opacity, $menu-transition-duration * 1.6, ease-in)
-    +opacity(0)
-
-    left:      50%
-    position:  absolute
-    top:       0
-    margin-left: -$blueprint-container-size / 2
-    width: $blueprint-container-size
-
-#navigation
-  $fs: 24px
-  margin-top: -89px
-  ul
-    +container
-    // +grid-background
-
-  li
-    $sw: span(3)
-
-    +adjust-font-size-to($fs)
-    +column(3)
-    +opacity(0.5)
-    +single-transition(opacity, $menu-transition-duration, $menu-transition-timing)
-
-    background: image-url('ui.png') no-repeat
-    text-align: center
-
-    &.dessert
-      +sprite-column(2, $sw)
-    &.salad
-      +sprite-column(3, $sw)
-    &.pasta
-      +last
-      +sprite-column(4, $sw)
-
-    a
-      +bracket
-      +link-colors(#fff)
-      +padding-leader(5, $fs)
-
-      display:          block
-      text-decoration:  none
-
-#goal
-  margin:  0 auto
-  width:   span(6)
-
-  p
-    +leader
-
-@each $part in pizza rhythm(107), dessert 300px, salad 300px, pasta 400px
-  $section:  nth($part, 1)
-  $height:   nth($part, 2)
-
-  ##{$section}
-    &:target
-      #navigation .#{$section}
-        +opacity(1)
-
-      #menu
-        background-image: image-url("menu-#{$section}.png")
-        height: $height
-        +opacity(1)
-
-        .#{$section}
-          +opacity(1)
-
-// #dessert:target #menu
-  background: #f0f none
-
-#menu
-  .pizza
-    > div
-      +clearfix
-      +trailer
-
-      &:hover
-        .prices
-          display: block
-    .prices
-      // +db
-      +float-right
-      margin-top: rhythm(-2)
-      margin-left: $blueprint-grid-margin
-      display: none
-
-      .small, .medium, .large
-        +column(1)
-        +padding-leader(2)
-        text-align: center
-      .small
-        +sprite-img('sizes.png', 1, 1, $blueprint-grid-width)
-      .medium
-        +sprite-img('sizes.png', 2, 1, $blueprint-grid-width)
-      .large
-        +sprite-img('sizes.png', 3, 1, $blueprint-grid-width)
-        +last
-    .name
-      // +db
-      +bracket
-      +adjust-font-size-to(24px)
-      +column(9)
-    .desc
-      // +db
-      +column(9, true)
-      +adjust-font-size-to(14px)
-      text-align: justify
-
-// html > body #menu
-  +grid-background
-
-#vignette
-  +single-box-shadow(#000, 0, 0, 20px, 5px, true)
-  position: fixed
-  top: 0
-  left: 0
-  min-height: 100%
-  width: 100%
+@import heading
+@import menu
+@import navigation
+@import goal
+@import vignette
